# OS

./: .gitignore  CMakeLists.txt  README_CN.md  app-entry.asm  app.lds  bochsrc  bootloader-func.asm  common.asm  compile.cmake  kernel-entry.asm  kernel.lds  loader.asm  makefile  tools.cmake
application/: CMakeLists.txt  app.c  app.lds  syscall.c  syscall.h
bochs/: bochsrc.in
bootloader/: CMakeLists.txt  boot.asm
common/: app.h  bootloader-func.asm  const.h  list.c  list.h  memory.c  memory.h  screen.c  screen.h  type.h  utility.c  utility.h
config/: app.lds.in  config.cmake  kernel.lds.in
kernel/: CMakeLists.txt  interrupt.c  interrupt.h  interrupt_handler.c  interrupt_handler.h  kernel.c  kernel.h  kmain.c  mutex.c  mutex.h  queue.c  queue.h  task.c  task.h
